# vectorview

./: .gitignore  Cargo.toml  README.md
src/: arm.rs  armor.rs  body.rs  calculator.rs  ear.rs  enums.rs  eye.rs  head.rs  icon.rs  leg.rs  lib.rs  mouth.rs  nose.rs  prelude.rs  rpgstat.rs  svg.rs  teeth.rs  trunk.rs  utils.rs
